# android-opus-official-standalone

./: .gitignore  LICENSE  README.md  TECHNICAL.md  build.gradle  build.ps1  build.sh  settings.gradle
.github/workflows/: build.yml
jni/: CMakeLists.txt  CodecOpus.cpp  CodecOpus.h  config.h  easyopus.cpp
libopusenc/: Makefile.am  configure.ac
libopusenc/src/: opus_header.h  opusenc.c  random.c
libopusenc/win32/VS2015/: opusenc.vcxproj  opusenc.vcxproj.filters
release/: android-opus-official-1.5.2-LTS.aar
src/main/: AndroidManifest.xml
src/main/java/com/theeasiestway/opus/: Constants.kt  Opus.kt
